# computergraphics-modeling

./: .gitignore  CMakeLists.txt  application.cpp  application.hpp  assignment1.cpp  assignment2.cpp  assignment3.cpp  assignment4.cpp  glutil.cpp  half_edge_mesh.cpp  half_edge_mesh.hpp  inputmanager.cpp  main.cpp  regular_mesh.cpp  regular_mesh.hpp  soup_mesh.cpp  soup_mesh.hpp
assignment1/: CMakeLists.txt  application.cpp  glutil.cpp  glutil.hpp  half_edge_mesh.cpp  half_edge_mesh.hpp  inputmanager.hpp  regular_mesh.cpp  regular_mesh.hpp  soup_mesh.cpp  soup_mesh.hpp
assignment1/shaders/: fragment_shader.glsl  vertex_shader.glsl
base/: CMakeLists.txt  application.hpp  inputmanager.cpp  inputmanager.hpp  main.cpp
shaders/: vertex_shader.glsl
